--- a/libs/shared/ui/prompt-dialog/src/lib/prompt-dialog.component.html
+++ b/libs/shared/ui/prompt-dialog/src/lib/prompt-dialog.component.html
@@ -1,8 +1,8 @@
 <div>
-  <h2 mat-dialog-title class="font-calibri--bold">{{data.title}}</h2>
+  <h2 mat-dialog-title class="font-calibri--bold mb-0">{{data.title}}</h2>
 </div>
 <mat-dialog-content>
-  <p class="text-muted font-sf-pro">{{data.desc}}</p>
+  <p class="text-muted font-sf-pro mb-0">{{data.desc}}</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-stroked-button (click)="emitEvent(false)">{{data.action.negTitle}}</button>
