feat(OH-623-test-group/create): Add core test group create template

--- a/libs/test-group/test-group-listing/src/lib/test-group-listing.component.html
+++ b/libs/test-group/test-group-listing/src/lib/test-group-listing.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class='col d-flex align-items-center justify-content-end'>
         <mat-spinner class='mr-4' [diameter]='20' *ngIf='true'></mat-spinner>
-        <button mat-flat-button color='primary' class='ml-2' [routerLink]='["/tests", "create"]'>
+        <button mat-flat-button color='primary' class='ml-2' [routerLink]='["/tests-group", "create"]'>
           <mat-icon class='mr-2'>add</mat-icon>
           {{"Add Test Group"}}
         </button>
