--- a/libs/pack/pack-listing/src/lib/pack-listing.component.html
+++ b/libs/pack/pack-listing/src/lib/pack-listing.component.html
@@ -1,1 +1,183 @@
-<p>pack-listing works!</p>
+<div class='p-4'>
+  <div class='container-fluid p-0'>
+    <div class='row'>
+      <div class='col-3'>
+        <mat-form-field class='w-100'>
+          <mat-label>Search</mat-label>
+          <input matInput>
+          <button mat-icon-button matSuffix *ngIf='false'>
+            <mat-icon style='font-size: 14px'>close</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+      <div class='col d-flex align-items-center justify-content-end'>
+        <mat-spinner class='mr-4' [diameter]='20' *ngIf='true'></mat-spinner>
+        <button mat-flat-button color='primary' class='ml-2' >
+          <mat-icon class='mr-2'>add</mat-icon>
+          {{"Add Pack"}}
+        </button>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-12'>
+        <mat-card class='p-0'>
+          <div class='container-fluid p-0'>
+            <div class='row'>
+              <div class='col-12'>
+                <table mat-table [dataSource]='packs' class='w-100'>
+
+                  <ng-container matColumnDef='id'>
+                    <th mat-header-cell *matHeaderCellDef>ID</th>
+                    <td mat-cell *matCellDef='let element'> {{element.id ?? '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='name'>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                   Name
+                  </span>
+                        <div class='d-flex align-items-center'>
+                          <mat-icon
+                            style='font-size: 16px; margin-bottom: -8px; width: 16px;'>{{true ? "keyboard_arrow_up" : "keyboard_arrow_down"}}</mat-icon>
+                          <button mat-icon-button class='mr-3'>
+                            <mat-icon style='font-size: 20px'>sort_by_alpha</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+                    </th>
+                    <td mat-cell *matCellDef='let element'
+                        [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='updated_at'>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    Date Added
+                  </span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3'>
+                            <mat-icon
+                              style='font-size: 20px;'>{{true ? "arrow_upward" : "arrow_downward"}}</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+
+                    </th>
+                    <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
+                  </ng-container>
+                  <ng-container matColumnDef='lessons'>
+                    <th mat-header-cell
+                        *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                   Lessons
+                  </span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3' >
+                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                          </button>
+<!--                          <mat-menu #typeMenu='matMenu'>-->
+<!--                            <mat-selection-list color='primary'-->
+<!--                                                [multiple]='true' class='pt-0'>-->
+<!--                              <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>-->
+<!--                                <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>-->
+<!--                              </mat-list-option>-->
+<!--                            </mat-selection-list>-->
+<!--                          </mat-menu>-->
+                        </div>
+                      </div>
+                    </th>
+                    <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='tests'>
+                    <th mat-header-cell
+                        *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                  Tests
+                  </span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3' >
+                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                          </button>
+                          <!--                          <mat-menu #typeMenu='matMenu'>-->
+                          <!--                            <mat-selection-list color='primary'-->
+                          <!--                                                [multiple]='true' class='pt-0'>-->
+                          <!--                              <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>-->
+                          <!--                                <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>-->
+                          <!--                              </mat-list-option>-->
+                          <!--                            </mat-selection-list>-->
+                          <!--                          </mat-menu>-->
+                        </div>
+                      </div>
+                    </th>
+                    <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='status'>
+                    <th mat-header-cell
+                        *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.STATUS | titlecase}}
+                  </span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3' [matMenuTriggerFor]='statusMenu'>
+                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                          </button>
+                          <mat-menu #statusMenu='matMenu'>
+                            <mat-selection-list color='primary'
+                                                [multiple]='false' class='pt-0'>
+                              <mat-list-option [value]='true'>
+                                <h6 class='mat-h6'>Published</h6>
+                              </mat-list-option>
+                              <mat-list-option [value]='false'>
+                                <h6 class='mat-h6'>Unpulished</h6>
+                              </mat-list-option>
+                            </mat-selection-list>
+                          </mat-menu>
+                        </div>
+                      </div>
+                    </th>
+                    <td mat-cell *matCellDef='let element'>
+                      <hidden-innovation-common-data-field-status
+                        [chipType]='element.status ? statusChipType.SUCCESS : statusChipType.WARNING'
+                        [text]='((element.status ? publishStatusEnum.PUBLISHED : publishStatusEnum.UNPUBLISHED)  | titlecase)'
+                      ></hidden-innovation-common-data-field-status>
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef='action'>
+                    <th mat-header-cell *matHeaderCellDef
+                        [width]='30'></th>
+                    <td mat-cell *matCellDef='let row'>
+                      <button mat-icon-button [matMenuTriggerFor]='testListMenu'>
+                        <mat-icon>more_vert</mat-icon>
+                      </button>
+                      <mat-menu #testListMenu='matMenu'>
+                        <button mat-menu-item [routerLink]='["/tests", "edit", "01"]'>
+                          <mat-icon>create</mat-icon>
+                          <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
+                        </button>
+                        <button mat-menu-item>
+                          <mat-icon>{{row.isActive ? "block" : "check_circle_outline"}}</mat-icon>
+                          <span>{{(row.isActive ? publishStatusEnum.UNPUBLISHED : publishStatusEnum.PUBLISHED) | titlecase}}</span>
+                        </button>
+                        <button mat-menu-item>
+                          <mat-icon>delete</mat-icon>
+                          <span>{{constantDataService.BUTTON_NAME.DELETE | titlecase}}</span>
+                        </button>
+                      </mat-menu>
+                    </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react'></tr>
+                </table>
+
+              </div>
+            </div>
+
+          </div>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div>
