--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -1,1 +1,154 @@
-<p>pack-create works!</p>
+<div class='p-4'>
+  <div class='container-fluid p-0'>
+    <div class='row mb-4'>
+      <div class='col-12 d-flex align-items-center justify-content-end'>
+        <button
+          mat-stroked-button type='button'
+          [routerLink]="['/packs']"
+          class='ml-3'>
+          Cancel
+        </button>
+        <button
+          mat-flat-button
+          class='ml-3'
+          color='primary' type='submit'>
+          Save
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class='container-fluid p-0'>
+    <div class='row'>
+      <div class='col-lg-6 col-12'>
+        <mat-card>
+          <mat-card-content>
+            <div class='container-fluid p-0 '>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                    General</h5>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Pack Name</mat-label>
+                    <input matInput autocomplete='no' type='text'>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Description</mat-label>
+                    <textarea matInput></textarea>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+            <div class='container-fluid p-0 '>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
+                    Media</h5>
+                </div>
+              </div>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <p class='text-muted mb-2'>Thumbnail</p>
+                  <button
+                    mat-stroked-button
+                    color='primary' type='submit'>
+                    Upload
+                  </button>
+                </div>
+              </div>
+              <div class='row mb-4'>
+                <div class='col-12'>
+                  <p class='text-muted mb-2'>Poster</p>
+                  <button
+                    mat-stroked-button
+                    color='primary' type='submit'>
+                    Upload
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class='container-fluid p-0 '>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
+                    Resources</h5>
+                </div>
+              </div>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <p class='text-muted mb-2'>PDFs and Images</p>
+                  <button
+                    mat-stroked-button
+                    color='primary' type='submit'>
+                    Upload
+                  </button>
+                </div>
+              </div>
+              <div class='row mb-4'>
+                <div class='col-12'>
+                  <p class='text-muted mb-2'>URLs</p>
+                  <button
+                    mat-stroked-button
+                    color='primary' type='submit'>
+                    Upload
+                  </button>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <div class='col-lg-6 col-12'>
+        <mat-card>
+          <mat-card-title class='d-flex justify-content-between align-items-center'>
+            <h3 class='mat-h3 mb-0 font-sf-pro'>Contents</h3>
+            <button
+              mat-flat-button
+              class='ml-3'
+              color='primary' type='submit'>
+              Add
+            </button>
+          </mat-card-title>
+          <mat-divider></mat-divider>
+          <mat-card-content >
+
+              <div class='pt-3' cdkDrag>
+                <mat-card class='question-card mat-elevation-z3 pt-1 pr-1'>
+                  <div class='d-flex align-items-center justify-content-between'>
+                    <h4 class='mat-h4 mb-0 font-weight-bold'>Introduction to high performance training</h4>
+                    <div>
+                      <button type='button' mat-icon-button [matMenuTriggerFor]='menu'>
+                        <mat-icon>more_vert</mat-icon>
+                      </button>
+                      <mat-menu #menu='matMenu'>
+                        <button type='button'  mat-menu-item>
+                          <mat-icon>create</mat-icon>
+                          <span>Edit</span>
+                        </button>
+                        <button type='button'  mat-menu-item>
+                          <mat-icon>delete</mat-icon>
+                          <span>Delete</span>
+                        </button>
+                      </mat-menu>
+                    </div>
+                  </div>
+                  <h5
+                    class='mat-h5 d-flex align-items-center text-color__primary mb-0 mr-2 type-icon font-calibri'>
+                    <mat-icon class='d-flex align-items-center'  aria-hidden="false" aria-label="fiber manual record">fiber_manual_record</mat-icon>
+                    <span>Lesson</span>
+                  </h5>
+                </mat-card>
+              </div>
+
+          </mat-card-content>
+          </mat-card>
+      </div>
+    </div>
+  </div>
