--- a/libs/pack/pack-listing/src/lib/pack-listing.component.html
+++ b/libs/pack/pack-listing/src/lib/pack-listing.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class='col d-flex align-items-center justify-content-end'>
         <mat-spinner class='mr-4' [diameter]='20' *ngIf='true'></mat-spinner>
-        <button mat-flat-button color='primary' class='ml-2' >
+        <button mat-flat-button color='primary' class='ml-2' [routerLink]='["/packs", "create"]' >
           <mat-icon class='mr-2'>add</mat-icon>
           {{"Add Pack"}}
         </button>
@@ -153,7 +153,7 @@
                         <mat-icon>more_vert</mat-icon>
                       </button>
                       <mat-menu #testListMenu='matMenu'>
-                        <button mat-menu-item [routerLink]='["/tests", "edit", "01"]'>
+                        <button mat-menu-item [routerLink]='["/packs", "edit", "01"]'>
                           <mat-icon>create</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                         </button>
