--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -120,7 +120,7 @@
               <button mat-menu-item>
                 <span>Test</span>
               </button>
-              <button mat-menu-item >
+              <button mat-menu-item (click)='openCreateLessonDialog()'  >
                 <span>Lessons</span>
               </button>
               <button mat-menu-item>
