feat(test-single): Created seperate component for error, text area etc and added logic for test form

--- a/libs/shared/ui/common-form-field-textarea/src/lib/common-form-field-textarea.component.html
+++ b/libs/shared/ui/common-form-field-textarea/src/lib/common-form-field-textarea.component.html
@@ -1,8 +1,8 @@
 <mat-form-field class='w-100'>
   <mat-label>{{label}}</mat-label>
-  <input matInput autocomplete='no' [disabled]='disabled' [readonly]='readonly' type='text'
-         [placeholder]='placeholder || label'
-         [formControl]='control'>
+  <textarea rows='6' matInput autocomplete='no' [disabled]='disabled' [readonly]='readonly'
+            [placeholder]='placeholder || label'
+            [formControl]='control'></textarea>
   <mat-error>
     <ng-template [ngIf]='((control.touch$ | async) || (control.dirty$ | async)) && (control.errors$ | async)' let-error>
       <hidden-innovation-form-field-errors
