feat(OH-563-test/create): Add video upload, poster upload feature with components

--- a/libs/shared/ui/common-form-field-image/src/lib/common-form-field-image.component.html
+++ b/libs/shared/ui/common-form-field-image/src/lib/common-form-field-image.component.html
@@ -21,6 +21,7 @@
       <div class='col'>
         <hidden-innovation-image-picker
           [isInvalid]='parentCtrl.invalid && parentCtrl.touched'
+          [aspectRatio]='aspectRatio'
           (imageUploadRes)='mapImage($event)'
         ></hidden-innovation-image-picker>
         <mat-error
