feat(pack-create): test group selector dialog table

--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -120,6 +120,9 @@
               <button mat-menu-item>
                 <span>Test</span>
               </button>
+              <button mat-menu-item (click)='openTestGroupDialog()' >
+                <span>Test Group</span>
+              </button>
               <button mat-menu-item (click)='openCreateLessonDialog()'  >
                 <span>Lessons</span>
               </button>
