feat(pack-create): test single function added to pack add drop down

--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -117,7 +117,7 @@
               Add
             </button>
             <mat-menu #menuPack="matMenu">
-              <button mat-menu-item>
+              <button mat-menu-item (click)='openTestSelector()' >
                 <span>Test</span>
               </button>
               <button mat-menu-item (click)='openTestGroupDialog()' >
