--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -126,7 +126,7 @@
               <button mat-menu-item (click)='openCreateLessonDialog()'  >
                 <span>Lessons</span>
               </button>
-              <button mat-menu-item>
+              <button mat-menu-item (click)='openQuestionnaireDialog()' >
                 <span>Questionnaire</span>
               </button>
             </mat-menu>
