--- a/libs/shared/ui/common-form-field-video/src/lib/common-form-field-video.component.html
+++ b/libs/shared/ui/common-form-field-video/src/lib/common-form-field-video.component.html
@@ -2,13 +2,11 @@
   <div class='row'>
     <ng-template [ngIf]='parentCtrl.valid && fileName' [ngIfElse]='videoSelectedElse'>
       <div class='col'>
-        <button (click)='removeVideo()'
-                matTooltip='{{fileName ?? "--"}}'
-                mat-stroked-button color='primary'
+        <button mat-stroked-button color='primary'
                 type='button'>
           <mat-icon color='warn' class='mr-1'>movie</mat-icon>
-          {{(fileName | maxStringLimit: 10) ?? '--'}}
-          <mat-icon class='ml-2'>close</mat-icon>
+          <span matTooltip='{{fileName ?? "--"}}'>{{(fileName | maxStringLimit: 10) ?? '--'}}</span>
+          <mat-icon matTooltip='Remove File' (click)='removeVideo()' class='ml-2'>close</mat-icon>
         </button>
       </div>
     </ng-template>
